Bug 396005. Severe performance degredation regression when a11y active. r=surkov, a=dsicore